--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-videos": "1.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-map-gl": "^6.1.10",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
